# otbg

./: .clang-format  .gitignore  CMakeLists.txt  README.md
docs/: contract.md  ideas.md
src/: CMakeLists.txt
src/Game/: CMakeLists.txt  InjectedRandomDevice.cpp  InjectedRandomDevice.h  Map.cpp  Map.hpp  Position.hpp  README.md  Unit.cpp  Unit.hpp  World.cpp  World.hpp
src/IO/: CMakeLists.txt  io.include.h
src/IO/Commands/: CreateMap.hpp  March.hpp  SpawnHunter.hpp  SpawnSwordsman.hpp
src/IO/Events/: MapCreated.hpp  MarchEnded.hpp  MarchStarted.hpp  UnitAbilityUsed.hpp  UnitAttacked.hpp  UnitDied.hpp  UnitMoved.hpp  UnitSpawned.hpp
src/IO/System/: CommandParser.cpp  CommandParser.hpp  EventSystem.hpp
src/IO/System/Details/: CommandParserVisitor.hpp  PrintFieldVisitor.hpp
src/Main/: CMakeLists.txt  main.cpp
src/NewGame/: CMakeLists.txt  World.cpp  World.h  interface.include.h
src/NewGame/Core/: References.h  ReportingContext.h  Space.h  Types.h  World.cpp  World.h
src/NewGame/Core/Interface/: InjectedRandomDevice.cpp  InjectedRandomDevice.h  (+2 more)
src/NewGame/Features/: Body.h  Hunter.h  Map.cpp  Map.h  MeleeAttack.h  Movement.h  PoisonArrows.h  PoisonEffect.h  RangedAttack.h  RendingAbility.h  Swordsman.h  Types.h  World.h  _types.exports.h
src/NewGame/Game/: Session.cpp  Session.h  World.cpp  World.h  _types.exports.h
src/NewGame/Internals/: InjectedRandomDevice.cpp  InjectedRandomDevice.h  macros.h
src/NewGame/Logic/: _types.exports.h
src/Test/: CMakeLists.txt  main.cpp  scenarions.cpp  scenarios.cpp  scenarios.h
src/Test/internals/: Capture.h
(+86 files in other folders)
